overlapping issue in mobile view fixed

--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -317,7 +317,7 @@ input:disabled + .checkmark + .text {
 
                         .ls-product {
                             margin-bottom: 0px;
-                            min-height: 130px;
+                            min-height: 100px;
                             background-position: center;
                         }
                     }
